0.06	More options in Main Menu:
	Audio selection normal,hearing_impaired,visually_impaired (work around for some AC3 channels is to select Hearing_impaired which is still in mpeg)
	cfg.media.subtitling.modepriority, cfg.media.subtitling.typepriority


0.05	OSD 1920x1088 (16:9) // OSD 1280x720 (16:9) // OSD 704x576 (16:9) But should work on other size too.
	EPG language routine expanded. More NIDs added.
	Added toFixed on Schedule page.
	Fixed colorkeys in some view.
	Subs can be switched off from the menu.
	More Recording / MediaPlayer testing


0.04	Volume OSD bar
	Media Player added.
	Only Play/ Pause & FF, no REW.
	OSD made for 576i !!
	Bugfix EPG info, now it should show the now/next info of the current channel.
	(for testing timeshift added (only on hdd-models and not working for vdr streams (?)) set timeshift to 1 in settings2.js)

0.03	Release date 2012/12/13
	Try to fix Teletext crash.
	teletext start screen -> teletext/tv 50%/50%
	Fix bug in epg time left routine.
	Cleaned SetOSDinfo routine
	Channellist show shortepg info / (bug?) On sky UK shortepg info = ext epg info
	split channels.js / settings.js & settings2.js (in the future settings2.js -> cfg.custom.xxx)
	Added switch timers (atm 1 switch timer possible and for next program only)
		switch timer reset from mainmenu.
	EPG language is now based on Satellite/ NID/ TID
	Added CA Mode to OSD key.png
	Full schedule.
	In guide mode Red - switch timer next program, Green now/next, Yellow Schedule, Blue program info.
	Speed up OSD. (In fullscreen don't need to update channellist.)
	AudioOut can now be selected in settings.js

