@@ -498,8 +498,9 @@ channelsnames[402] = "ZDF (S)";
 channels[402] = "S19.2E-1-1079-28006";
 channelsnames[403] = "3sat (S)";
 channels[403] = "S19.2E-1-1079-28007";
-channelsnames[404] = "WDR Düsseldorf (S)";
-channels[404] = "S19.2E-1-1201-28308";
+channelsnames[404] = "WDR Düsseldorf HD (S)";
+channels[404] = "S19.2E-1-1201-28328";
+// SD channels[404] = "S19.2E-1-1201-28308";
 channelsnames[405] = "NDR FS HH (S)";
 channels[405] = "S19.2E-1-1073-28225";
 channelsnames[406] = "MDR Thüringen (S)";
@@ -1175,8 +1176,9 @@ channelsnames[927] = "CNN (S)";
 channels[927] = "S28.2E-2-2018-7140";
 channelsnames[928] = "FOX News (S)";
 channels[928] = "S28.2E-2-2031-4643";
-channelsnames[929] = "RT (S)";
-channels[929] = "S28.2E-2-2409-50847";
+channelsnames[929] = "RT HD(S)";
+channels[929] = "S28.2E-2-2312-53148";
+//SD channels[929] = "S28.2E-2-2409-50847";
 channelsnames[930] = "Al Jazeera Eng (S)";
 channels[930] = "S28.2E-2-2412-51107";
 channelsnames[931] = "Russia Today (S)";
@@ -1210,10 +1212,15 @@ channelsnames[965] = "RSI LA 1 HD (S)";
 channels[965] = "S13.0E-318-1700-14051";
 channelsnames[966] = "RSI LA 2 HD (S)";
 channels[966] = "S13.0E-318-8500-951";
+channelsnames[967] = "RT HD(S)";
+channels[967] = "S28.2E-2-2312-53148";
 channelsnames[968] = "ITV1 London HD (S)";
 channels[968] = "S28.2E-2-2049-10000";
 channelsnames[969] = "Channel 4 HD (S)";
 channels[969] = "S28.2E-2-2068-21200";
+channelsnames[970] = "WDR Düsseldorf HD (S)";
+channels[970] = "S19.2E-1-1201-28328";
+
 
 channelsnames[991] = "NED1 HD (S)"
 channels[991] = "S23.5E-3-3208-7035"
