@@ -122,7 +122,6 @@ var osdtimeout = 0;
 var osdVolumetimeout = 0;
 var epgactive = 0;
 var preChan = 0;
-var cds = 1;
 var timerChan = 10;
 var TimerActions = "";
 var switchtimerID = 0;
@@ -135,10 +134,10 @@ var CAicon = "\uE00D";
 var fsAudio = (16*Yfactor) + "px";
 var fsTime = (16*Yfactor) + "px";
 var fsName = (27*Yfactor) + "px";
-var fsMenu = (20*Yfactor) + "px";
+var fsMenu = (18*Yfactor) + "px";
 var fsChan = (43*Yfactor) + "px"; 
 var fsCA = (32*Yfactor) + "px";
-var fsMenuMain = (40*Yfactor) + "px";
+var fsMenuMain = (35*Yfactor) + "px";
 var fsEpg = (19*Yfactor) + "px";
 var fsEpginfo = (21*Yfactor) + "px";
 var fsList = (18*Yfactor) + "px";
@@ -148,6 +147,9 @@ var fsRec = (27*Yfactor) + "px";
 var fsReclist = (19*Yfactor) + "px";
 var fsMedia = (27*Yfactor) + "px";
 var fsKeys = (19*Yfactor) + "px";
+
+var AudioInfo = new Array();
+var xx = 0;
 
 var isRecording = 0; // set by recording subroutine
 var audiotype = 0; // used for selecting "cfg.media.audio.typepriority","normal,hearing_impaired,visually_impaired"
